# tensorflow_jni

./: CMakeLists.txt
src/main/native/cpp/: rubik_jni.cpp
